--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-  ext.kotlin_version = '1.0.0-beta-2423'
+  ext.kotlin_version = '1.0.0-beta-3595'
   repositories {
     jcenter()
   }
@@ -22,7 +22,6 @@ project.ext.targetCompatibility = "1.8"
 repositories {
   jcenter()
 }
-
 project.mainClassName = "griffio.MainApplication"
 
 project.dependencies {
@@ -31,7 +30,7 @@ project.dependencies {
   ext.guava_version = "18.0"
   ext.jpa_version = "2.1.0"
   ext.junit_version = "4.12"
-  ext.kotlin_version = "1.0.0-beta-2423"
+  ext.kotlin_version = "1.0.0-beta-3595"
   ext.querydsl_version = "4.0.6"
   ext.truth_version = "0.27"
 
@@ -53,6 +52,10 @@ project.dependencies {
       "com.google.truth:truth:${truth_version}"
   )
 
+}
+
+kapt {
+  generateStubs = false
 }
 
 task wrapper(type: Wrapper) {
