--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-  ext.kotlin_version = '1.0.0-beta-4584'
+  ext.kotlin_version = '1.0.1-2'
   repositories {
     jcenter()
   }
@@ -26,7 +26,7 @@ project.mainClassName = "griffio.MainApplication"
 
 project.dependencies {
 
-  ext.dagger_version = "2.0.1"
+  ext.dagger_version = "2.0.2"
   ext.guava_version = "18.0"
   ext.jpa_version = "2.1.0"
   ext.junit_version = "4.12"
