--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 buildscript {
-  ext.kotlin_version = '1.0.1-2'
   repositories {
-    jcenter()
+    mavenCentral()
   }
   dependencies {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
@@ -30,7 +29,6 @@ project.dependencies {
   ext.guava_version = "18.0"
   ext.jpa_version = "2.1.0"
   ext.junit_version = "4.12"
-  ext.kotlin_version = "1.0.0"
   ext.querydsl_version = "4.0.6"
   ext.truth_version = "0.27"
 
