--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
   id 'java'
   id 'application'
-  id 'nebula.kotlin' version '1.0.3'
+  id "com.zoltu.kotlin" version "1.0.4"
   id "com.github.johnrengelman.shadow" version "1.2.3"
 }
 
@@ -43,11 +43,6 @@ project.dependencies {
 
 sourceSets {
   main.java.srcDirs += [file("$buildDir/generated/source/kapt/main")]
-}
-
-
-kapt {
-  generateStubs = false
 }
 
 task wrapper(type: Wrapper) {
