--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,11 @@
-buildscript {
-  ext.kotlin_version = '1.0.6'
-
-  repositories {
-    mavenCentral()
-  }
-
-  dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-  }
-}
-
 plugins {
   id "java"
   id "application"
+  id "com.zoltu.kotlin" version "1.0.6"
   id "com.github.johnrengelman.shadow" version "1.2.3"
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-kapt' //kapt3 remove this plugin for previous version
+apply plugin: 'kotlin-kapt' //applies kapt3 - remove this for previous version
 
 project.ext.sourceCompatibility = "1.8"
 project.ext.targetCompatibility = "1.8"
@@ -25,6 +13,7 @@ project.ext.targetCompatibility = "1.8"
 repositories {
   mavenCentral()
 }
+
 project.mainClassName = "griffio.MainApplication"
 
 project.dependencies {
@@ -59,7 +48,7 @@ project.dependencies {
 
 kapt {
   // stubs are not needed in kapt3
-  //generateStubs = true
+  // generateStubs = true
 }
 
 sourceSets {
