--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
   id "java"
   id "application"
-  id "org.jetbrains.kotlin.jvm" version "1.1.3-2"
-  id "org.jetbrains.kotlin.kapt" version "1.1.3-2"
+  id "org.jetbrains.kotlin.jvm" version "1.1.4"
+  id "org.jetbrains.kotlin.kapt" version "1.1.4"
   id "com.github.johnrengelman.shadow" version "1.2.3"
 }
 
