Kotlin 1.3.41, kapt, gradle 5.x
Still assumes Java 8

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id "java"
     id "application"
-    id "org.jetbrains.kotlin.jvm" version "1.3.10"
-    id "org.jetbrains.kotlin.kapt" version "1.3.10"
+    id "org.jetbrains.kotlin.jvm" version "1.3.41"
+    id "org.jetbrains.kotlin.kapt" version "1.3.41"
     id "com.github.johnrengelman.shadow" version "4.0.2"
 }
 
@@ -17,7 +17,7 @@ project.mainClassName = "griffio.MainApplication"
 
 project.dependencies {
 
-    ext.dagger_version = "2.19"
+    ext.dagger_version = "2.23.2"
     ext.guava_version = "20.0"
     ext.jpa_version = "2.1.0"
     ext.junit_version = "4.12"
@@ -25,16 +25,19 @@ project.dependencies {
     ext.truth_version = "0.30"
 
     compile(
-            "com.google.dagger:dagger:${dagger_version}",
-            "com.querydsl:querydsl-collections:${querydsl_version}",
-            "com.querydsl:querydsl-jpa:${querydsl_version}",
             "org.eclipse.persistence:javax.persistence:${jpa_version}",
             "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}",
+            "com.querydsl:querydsl-collections:${querydsl_version}",
+            "com.querydsl:querydsl-jpa:${querydsl_version}"
+    )
+
+    implementation(
+            "com.google.dagger:dagger:${dagger_version}",
     )
 
     kapt(
             "com.querydsl:querydsl-apt:${querydsl_version}:jpa",
-            "org.eclipse.persistence:javax.persistence:${jpa_version}",
+            "com.google.dagger:dagger-compiler:${dagger_version}"
     )
 
     testCompile(
@@ -51,8 +54,4 @@ kapt {
 
 sourceSets {
     main.java.srcDirs += [file("$buildDir/generated/source/kapt/main")]
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.2'
 }
